--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "js-cookie": "3.0.0",
     "msw": "0.34.0",
     "react": "17.0.1",
+    "react-date-picker": "11.0.0",
+    "react-datepicker": "7.3.0",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
